create script to dynamically add buttons

--- a/index.html
+++ b/index.html
@@ -5,35 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="./styles.css" rel="stylesheet">
+    <script src= "./script.js" defer></script>
 </head>
 <body>
 
-    <div class = "calc">
+    <div class = "calc layout">
         <div class = "output">
 
         </div>
 
-        <div class = "numbers operators">
-
-            <div>
-
-            </div>
-
-            <div>
-
-            </div>
-
-            <div>
-
-            </div>
-
-            <div>
-
-            </div>
-
-            <div>
-
-            </div>
+        <div class = "input btns">
 
         </div>
     </div>
