do css to apply styles as required

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <div class = "calc layout">
         <div class = "output">
-
+            <div class = "history"></div>
+            <div class = "current value"></div>
         </div>
 
         <div class = "btnContainer">
