add keyboard support

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <script>
     const btnContainer = document.querySelector(".btnContainer");
 
-    const inpBtns = [["C", "⌫", "%", "\u00F7"], 
-                    ["7", "8", "9", "\u00D7"], 
+    const inpBtns = [["c", "⌫", "%", "/"], 
+                    ["7", "8", "9", "*"], 
                     ["4", "5", "6", "-"], 
                     ["1", "2", "3", "+",],
                     [".", "0", "="]];
